# kreatisite

./: .claude.compact  .flake8  .github-actions-template.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  aws-register-domain.yaml.example  fixup.sh  mypy.ini  prebuild.sh  pyproject.toml  smoketest.sh
kratisite/: __init__.py  cli.py
kreatisite/: __init__.py  cli.py  cmd.py  parser.py  scripts.py
tests/: test_aws_mocking.py  test_cli.py  test_cli_integration.py  test_cli_unit.py  test_cmd.py  test_e2e_smoke.py  test_init.py  test_parser.py  test_scripts.py
