[tool.poetry]
name = "kreatisite"
version = "0.1.0"
description = "Kreatisite command line application"
authors = ["DevixLabs <info@devixlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kreatisite = "kreatisite.cli:main"
lint = "kreatisite.scripts:lint"
test = "kreatisite.scripts:test"
check = "kreatisite.scripts:check_all"
setup-hooks = "kreatisite.scripts:setup_hooks"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
