[tool.poetry]
name = "kreatisite"
version = "0.1.0"
description = "Kreatisite command line application"
authors = ["DevixLabs <info@devixlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^7.2.0"
black = "^24.0.0"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
clirunner = "^0.2.0"
pytest-subprocess = "^1.5.0"
pytest-console-scripts = "^1.4.1"
pytest-timeout = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kreatisite = "kreatisite.cli:main"
lint = "kreatisite.scripts:lint"
test = "kreatisite.scripts:test"
check = "kreatisite.scripts:check_all"
setup-hooks = "kreatisite.scripts:setup_hooks"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (fast, mocked)",
    "integration: Integration tests (installed package)",
    "e2e: End-to-end tests (real AWS calls)",
]
